--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=13061997Meloleo!
 spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
+spring.freemarker.suffix= .ftl
